// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test snapshot 1`] = `
<View
  style={{}}
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 6,
        },
        {
          "backgroundColor": "#303030",
          "borderColor": "#31adff",
          "borderRadius": 4,
          "borderWidth": 1,
        },
        undefined,
      ]
    }
    testID="text-input-outline"
  />
  <View>
    <View
      style={
        [
          {
            "paddingBottom": 0,
          },
          {
            "minHeight": 56,
            "paddingTop": 8,
          },
        ]
      }
    >
      <TextInput
        autoCapitalize="none"
        editable={true}
        keyboardType="default"
        maxFontSizeMultiplier={1.5}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#ffffff"
        selectionColor="#ffd600"
        style={
          [
            {
              "margin": 0,
              "zIndex": 1,
            },
            {
              "height": 48,
            },
            {
              "paddingBottom": 0,
              "paddingTop": 0,
            },
            {
              "color": "#ffd600",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "paddingHorizontal": 16,
              "textAlign": "left",
              "textAlignVertical": "center",
            },
            false,
            [
              {},
            ],
            undefined,
          ]
        }
        testID="text-input-outlined"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;

exports[`test with right icon 1`] = `
<View
  style={{}}
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 6,
        },
        {
          "backgroundColor": "#303030",
          "borderColor": "#31adff",
          "borderRadius": 4,
          "borderWidth": 1,
        },
        undefined,
      ]
    }
    testID="text-input-outline"
  />
  <View>
    <View
      style={
        [
          {
            "paddingBottom": 0,
          },
          {
            "minHeight": 56,
            "paddingTop": 8,
          },
        ]
      }
    >
      <TextInput
        autoCapitalize="none"
        editable={true}
        keyboardType="default"
        maxFontSizeMultiplier={1.5}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#ffffff"
        selectionColor="#ffd600"
        style={
          [
            {
              "margin": 0,
              "zIndex": 1,
            },
            {
              "height": 48,
            },
            {
              "paddingBottom": 0,
              "paddingTop": 0,
            },
            {
              "color": "#ffd600",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": undefined,
              "letterSpacing": 0.15,
              "lineHeight": undefined,
              "paddingHorizontal": 16,
              "textAlign": "left",
              "textAlignVertical": "center",
            },
            false,
            {
              "marginRight": 56,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
        testID="text-input-outlined"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "height": 24,
            "justifyContent": "center",
            "position": "absolute",
            "width": 24,
          },
          {
            "right": 16,
            "top": 19,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "alignSelf": undefined,
            "bottom": undefined,
            "end": undefined,
            "left": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": undefined,
                "borderColor": "rgba(121, 116, 126, 1)",
                "borderRadius": 20,
                "borderWidth": 0,
                "elevation": 0,
                "height": 40,
                "margin": 0,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <View
              accessibilityComponentType="button"
              accessibilityRole="button"
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessibilityTraits="button"
              accessible={true}
              centered={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 6,
                  "left": 6,
                  "right": 6,
                  "top": 6,
                }
              }
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  false,
                  [
                    {
                      "alignItems": "center",
                      "flexGrow": 1,
                      "justifyContent": "center",
                    },
                    {
                      "borderRadius": 20,
                    },
                  ],
                ]
              }
              testID="right-button"
            >
              <Text
                accessibilityElementsHidden={true}
                allowFontScaling={false}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                selectable={false}
                style={
                  [
                    {
                      "color": "#ffd600",
                      "fontSize": 24,
                    },
                    [
                      {
                        "lineHeight": 24,
                        "transform": [
                          {
                            "scaleX": 1,
                          },
                        ],
                      },
                      {
                        "backgroundColor": "transparent",
                      },
                    ],
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰈈
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
